fixed scrollbar

--- a/src/components/Database/Database.scss
+++ b/src/components/Database/Database.scss
@@ -48,19 +48,20 @@
   position: fixed;
   top: 7%;
   bottom: 0;
-  left: -500px;
+  left: -600px;
   padding: 20px;
   background: rgba(30, 30, 30, 1);
   z-index: 998;
   width: 30vw;
   max-height: 92vh;
-  overflow-y: auto;
+  overflow-y: hidden;
   color: black;
   transition: left 0.5s ease-in-out;
   /*  Moves to be shown when database is opened */
 
   &.open {
     left: 0;
+    overflow-y: auto;
   }
 
   /* Header of database */
